WMG112519/force-app/main/default/objects/Fund__c/fields/Cusip__c.field-meta.xml
<CustomField>
    <fullName>Cusip__c</fullName>
    <externalId>true</externalId>
    <label>Cusip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>