WMG112519/force-app/main/default/objects/Fund__c/fields/Legacy_Fund_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Fund_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Fund ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>