WMG112519/force-app/main/default/objects/Fund__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Share Class</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>