WMG112519/force-app/main/default/objects/Fund__c/fields/Share_Class__c.field-meta.xml
<CustomField>
    <fullName>Share_Class__c</fullName>
    <label>Share Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>