WMG112519/force-app/main/default/objects/Fund__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scout Mid Cap Fund</fullName>
            </value>
            <value>
                <fullName>Scout Small Cap Fund</fullName>
            </value>
            <value>
                <fullName>Scout Core Bond Fund Class I</fullName>
            </value>
            <value>
                <fullName>Scout International Fund ADR</fullName>
            </value>
            <value>
                <fullName>Scout Core Bond Fund Class Y</fullName>
            </value>
            <value>
                <fullName>Kinetics Medical Fund Class C</fullName>
            </value>
            <value>
                <fullName>Kinetics Internet Fund Class A</fullName>
            </value>
            <value>
                <fullName>Kinetics Paradigm Fund Class A</fullName>
            </value>
            <value>
                <fullName>Kinetics Medical Fund Class A</fullName>
            </value>
            <value>
                <fullName>Kinetics Paradigm Fund Class C</fullName>
            </value>
            <value>
                <fullName>Kinetics Internet Fund Class C</fullName>
            </value>
            <value>
                <fullName>Kinetics Paradigm Fund Class I</fullName>
            </value>
            <value>
                <fullName>Kinetics Paradigm No Load Class</fullName>
            </value>
            <value>
                <fullName>Oberweis China Opportunities Fund</fullName>
            </value>
            <value>
                <fullName>Gottex Endowment Strategy Class A</fullName>
            </value>
            <value>
                <fullName>Gottex Endowment Strategy Class I</fullName>
            </value>
            <value>
                <fullName>Scout Core Plus Bond Fund - Class Y</fullName>
            </value>
            <value>
                <fullName>Kinetics Medical Fund No Load Class</fullName>
            </value>
            <value>
                <fullName>West Loop Realty Income &amp; Growth Fund</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund Class C</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund Class I</fullName>
            </value>
            <value>
                <fullName>Kinetics Internet Fund No Load Class</fullName>
            </value>
            <value>
                <fullName>Scout Unconstrained Bond Fund Class I</fullName>
            </value>
            <value>
                <fullName>Scout Unconstrained Bond Fund Class Y</fullName>
            </value>
            <value>
                <fullName>Chilton Realty Income &amp; Growth Class A</fullName>
            </value>
            <value>
                <fullName>Chilton Realty Income &amp; Growth Class C</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund Class A</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund Class C</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund Class I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>