WMG112519/force-app/main/default/objects/Fund__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <externalId>true</externalId>
    <label>Symbol</label>
    <length>40</length>
    <type>Text</type>
</CustomField>