WMG112519/force-app/main/default/objects/Fund__c/recordTypes/Share_Class.recordType-meta.xml
<RecordType>
    <fullName>Share_Class</fullName>
    <active>true</active>
    <label>Share Class</label>
</RecordType>