WMG112519/force-app/main/default/objects/Fund__c/listViews/Portfolios.listView-meta.xml
<ListView>
    <fullName>Portfolios</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fund__c.Portfolio</value>
    </filters>
    <label>Portfolios</label>
    <language>en_US</language>
</ListView>